# vk-minimal

./: .clang-format  .flake8  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  TaskList.md  asan.supp  build.sh  doxy.conf  doxy.sh  init.sh  vk.sh
docs/: lease.md
examples/: CMakeLists.txt  cpu.c  device.c  extend.c  instance.c  shader.c  validate.c  validation.c  vk.c
include/: hash_table.h  lease.h  unit_test.h
include/core/: hash_table.h  lease.h  logger.h  memory.h  unit_test.h
include/vk/: alloc.h  allocator.h  device.h  extension.h  instance.h  shader.h  validation.h
shaders/: atomic_sum.comp  mean.comp  vector_add.comp
src/: hash_table.c  lease.c  logger.c  memory.c  shader.c  unit_test.c
src/core/: hash_table.c  lease.c  logger.c  memory.c  unit_test.c
src/vk/: alloc.c  allocator.c  device.c  extension.c  instance.c  shader.c  validation.c
tests/: CMakeLists.txt  test_logger.c
